--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^5.16.7",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
