--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.4",
     "dotenv": "^16.4.5",
+    "meta": "^2.2.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
