--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "meta": "^2.2.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
