--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
     "sass": "^1.77.8"
